fixing jenkins, committing extra changes
