# api/openapi-spec/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Argo",
-    "version": "v2.4.3"
+    "version": "v2.4.3-1.0.0-cyrus"
   },
   "paths": {},
   "definitions": {
@@ -65,10 +65,6 @@
           "description": "From allows an artifact to reference an artifact from a previous step",
           "type": "string"
         },
-        "gcs": {
-          "description": "GCS contains GCS artifact location details",
-          "$ref": "#/definitions/io.argoproj.workflow.v1alpha1.GCSArtifact"
-        },
         "git": {
           "description": "Git contains git artifact location details",
           "$ref": "#/definitions/io.argoproj.workflow.v1alpha1.GitArtifact"
@@ -123,10 +119,6 @@
         "artifactory": {
           "description": "Artifactory contains artifactory artifact location details",
           "$ref": "#/definitions/io.argoproj.workflow.v1alpha1.ArtifactoryArtifact"
-        },
-        "gcs": {
-          "description": "GCS contains GCS artifact location details",
-          "$ref": "#/definitions/io.argoproj.workflow.v1alpha1.GCSArtifact"
         },
         "git": {
           "description": "Git contains git artifact location details",
@@ -272,7 +264,7 @@
       ],
       "properties": {
         "failFast": {
-          "description": "This flag is for DAG logic. The DAG logic has a built-in \"fail fast\" feature to stop scheduling new steps, as soon as it detects that one of the DAG nodes is failed. Then it waits until all DAG nodes are completed before failing the DAG itself. The FailFast flag default is true,  if set to false, it will allow a DAG to run all branches of the DAG to completion (either success or failure), regardless of the failed outcomes of branches in the DAG. More info and example about this feature at https://github.com/argoproj/argo/issues/1442",
+          "description": "This flag is for DAG logic. The DAG logic has a built-in \"fail fast\" feature to stop scheduling new steps, as soon as it detects that one of the DAG nodes is failed. Then it waits until all DAG nodes are completed before failing the DAG itself. The FailFast flag default is true,  if set to false, it will allow a DAG to run all branches of the DAG to completion (either success or failure), regardless of the failed outcomes of branches in the DAG. More info and example about this feature at https://github.com/cyrusbiotechnology/argo/issues/1442",
           "type": "boolean"
         },
         "target": {
@@ -297,86 +289,6 @@
         "serviceAccountName": {
           "description": "ServiceAccountName specifies the service account name of the executor container.",
           "type": "string"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.ExceptionCondition": {
-      "description": "ExceptionCondition is a container for defining an error or warning rule",
-      "required": [
-        "name"
-      ],
-      "properties": {
-        "message": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "patternMatched": {
-          "type": "string"
-        },
-        "patternUnmatched": {
-          "type": "string"
-        },
-        "source": {
-          "type": "string"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.ExceptionResult": {
-      "description": "ExceptionResult contains the results on an extended error or warning condition evaluation",
-      "required": [
-        "name",
-        "message",
-        "podName",
-        "stepName"
-      ],
-      "properties": {
-        "message": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "podName": {
-          "type": "string"
-        },
-        "stepName": {
-          "type": "string"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.GCSArtifact": {
-      "description": "GCSArtifact is the location of a GCS artifact",
-      "required": [
-        "bucket",
-        "credentialsSecret",
-        "key"
-      ],
-      "properties": {
-        "bucket": {
-          "type": "string"
-        },
-        "credentialsSecret": {
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "key": {
-          "type": "string"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.GCSBucket": {
-      "description": "GCSBucket contains the access information required for acting with a GCS bucket",
-      "required": [
-        "bucket",
-        "credentialsSecret"
-      ],
-      "properties": {
-        "bucket": {
-          "type": "string"
-        },
-        "credentialsSecret": {
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
         }
       }
     },
@@ -422,130 +334,6 @@
         "usernameSecret": {
           "description": "UsernameSecret is the secret selector to the repository username",
           "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.HDFSArtifact": {
-      "description": "HDFSArtifact is the location of an HDFS artifact",
-      "required": [
-        "addresses",
-        "path"
-      ],
-      "properties": {
-        "addresses": {
-          "description": "Addresses is accessible addresses of HDFS name nodes",
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "force": {
-          "description": "Force copies a file forcibly even if it exists (default: false)",
-          "type": "boolean"
-        },
-        "hdfsUser": {
-          "description": "HDFSUser is the user to access HDFS file system. It is ignored if either ccache or keytab is used.",
-          "type": "string"
-        },
-        "krbCCacheSecret": {
-          "description": "KrbCCacheSecret is the secret selector for Kerberos ccache Either ccache or keytab can be set to use Kerberos.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "krbConfigConfigMap": {
-          "description": "KrbConfig is the configmap selector for Kerberos config as string It must be set if either ccache or keytab is used.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.ConfigMapKeySelector"
-        },
-        "krbKeytabSecret": {
-          "description": "KrbKeytabSecret is the secret selector for Kerberos keytab Either ccache or keytab can be set to use Kerberos.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "krbRealm": {
-          "description": "KrbRealm is the Kerberos realm used with Kerberos keytab It must be set if keytab is used.",
-          "type": "string"
-        },
-        "krbServicePrincipalName": {
-          "description": "KrbServicePrincipalName is the principal name of Kerberos service It must be set if either ccache or keytab is used.",
-          "type": "string"
-        },
-        "krbUsername": {
-          "description": "KrbUsername is the Kerberos username used with Kerberos keytab It must be set if keytab is used.",
-          "type": "string"
-        },
-        "path": {
-          "description": "Path is a file path in HDFS",
-          "type": "string"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.HDFSConfig": {
-      "description": "HDFSConfig is configurations for HDFS",
-      "required": [
-        "addresses"
-      ],
-      "properties": {
-        "addresses": {
-          "description": "Addresses is accessible addresses of HDFS name nodes",
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "hdfsUser": {
-          "description": "HDFSUser is the user to access HDFS file system. It is ignored if either ccache or keytab is used.",
-          "type": "string"
-        },
-        "krbCCacheSecret": {
-          "description": "KrbCCacheSecret is the secret selector for Kerberos ccache Either ccache or keytab can be set to use Kerberos.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "krbConfigConfigMap": {
-          "description": "KrbConfig is the configmap selector for Kerberos config as string It must be set if either ccache or keytab is used.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.ConfigMapKeySelector"
-        },
-        "krbKeytabSecret": {
-          "description": "KrbKeytabSecret is the secret selector for Kerberos keytab Either ccache or keytab can be set to use Kerberos.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "krbRealm": {
-          "description": "KrbRealm is the Kerberos realm used with Kerberos keytab It must be set if keytab is used.",
-          "type": "string"
-        },
-        "krbServicePrincipalName": {
-          "description": "KrbServicePrincipalName is the principal name of Kerberos service It must be set if either ccache or keytab is used.",
-          "type": "string"
-        },
-        "krbUsername": {
-          "description": "KrbUsername is the Kerberos username used with Kerberos keytab It must be set if keytab is used.",
-          "type": "string"
-        }
-      }
-    },
-    "io.argoproj.workflow.v1alpha1.HDFSKrbConfig": {
-      "description": "HDFSKrbConfig is auth configurations for Kerberos",
-      "properties": {
-        "krbCCacheSecret": {
-          "description": "KrbCCacheSecret is the secret selector for Kerberos ccache Either ccache or keytab can be set to use Kerberos.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "krbConfigConfigMap": {
-          "description": "KrbConfig is the configmap selector for Kerberos config as string It must be set if either ccache or keytab is used.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.ConfigMapKeySelector"
-        },
-        "krbKeytabSecret": {
-          "description": "KrbKeytabSecret is the secret selector for Kerberos keytab Either ccache or keytab can be set to use Kerberos.",
-          "$ref": "#/definitions/io.k8s.api.core.v1.SecretKeySelector"
-        },
-        "krbRealm": {
-          "description": "KrbRealm is the Kerberos realm used with Kerberos keytab It must be set if keytab is used.",
-          "type": "string"
-        },
-        "krbServicePrincipalName": {
-          "description": "KrbServicePrincipalName is the principal name of Kerberos service It must be set if either ccache or keytab is used.",
-          "type": "string"
-        },
-        "krbUsername": {
-          "description": "KrbUsername is the Kerberos username used with Kerberos keytab It must be set if keytab is used.",
-          "type": "string"
         }
       }
     },
@@ -935,10 +723,6 @@
         },
         "manifest": {
           "description": "Manifest contains the kubernetes manifest",
-          "type": "string"
-        },
-        "mergeStrategy": {
-          "description": "MergeStrategy is the strategy used to merge a patch. It defaults to \"strategic\" Must be one of: strategic, merge, json",
           "type": "string"
         },
         "mergeStrategy": {
